# VehicleTerminal

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  Project_Brief.md  README.md  build.sh  install_dependencies.sh  install_qt5.sh  resume_suggestions.md  setup_project.sh  运行智能车载终端步骤.docx  项目功能.md
LLM_Voice_Flow/: .clang-format  .clangd  README.md
LLM_Voice_Flow/docs/: 0.大模型技术讨论.md  1.0数据集.md  3.评价指标.md  4.LLM流式推理模拟分析.md  ASR流程.txt  LLM推理后处理性能优化.md  LLM系统架构设计.md  LoRA微调完整指南.md  大模型技术讨论.md  指标评价脚本.py  推理性能优化方案.md  智能座舱系统设计模式.md  智能座舱训练数据集.md  设计模式详解.md
LLM_Voice_Flow/llm/rknn-llm/examples/DeepSeek-R1-Distill-Qwen-1.5B_Demo/deploy/: CMakeLists.txt
LLM_Voice_Flow/llm/rknn-llm/examples/DeepSeek-R1-Distill-Qwen-1.5B_Demo/deploy/src/: llm_demo.cpp
LLM_Voice_Flow/llm/rknn-llm/rkllm-runtime/Linux/librkllm_api/include/: rkllm.h
LLM_Voice_Flow/tts/: CMakeLists.txt
LLM_Voice_Flow/tts/src/header/: Hanz2Piny.h  hanzi2phoneid.h  pinyinmap.h
LLM_Voice_Flow/tts/src/hz2py/: pinyinmap.cpp
LLM_Voice_Flow/tts/src/platform/: tts_file_io.cpp
LLM_Voice_Flow/tts/test/: main.cpp
LLM_Voice_Flow/tts/tts_server/include/: AudioPlayer.h  MessageQueue.h  TTSModel.h  TextProcessor.h  Utils.h
LLM_Voice_Flow/tts/tts_server/src/: AudioPlayer.cpp  MessageQueue.cpp  TTSModel.cpp  TextProcessor.cpp  Utils.cpp  main.cpp
LLM_Voice_Flow/voice/models/sherpa-onnx-streaming-zipformer-small-bilingual-zh-en-2023-02-16/: decoder-epoch-99-avg-1.int8.onnx  joiner-epoch-99-avg-1.int8.onnx
LLM_Voice_Flow/voice/sherpa-onnx/: .clang-tidy  CMakeLists.txt
LLM_Voice_Flow/voice/sherpa-onnx/sherpa-onnx/: CMakeLists.txt
LLM_Voice_Flow/voice/sherpa-onnx/sherpa-onnx/c-api/: c-api.cc
LLM_Voice_Flow/voice/sherpa-onnx/sherpa-onnx/csrc/: CMakeLists.txt  endpoint.h  online-recognizer.h  sherpa-onnx-microphone.cc
LLM_Voice_Flow/voice/sherpa-onnx/sherpa-onnx/voice/: CMakeLists.txt  microphone.cc  microphone.h  sherpa-onnx-microphone.cc
LLM_Voice_Flow/zmq-comm-kit/: CMakeLists.txt
LLM_Voice_Flow/zmq-comm-kit/include/: ZmqClient.h  ZmqInterface.h  ZmqServer.h
LLM_Voice_Flow/zmq-comm-kit/src/: ZmqClient.cpp  ZmqInterface.cpp  ZmqServer.cpp
LLM_Voice_Flow/zmq-comm-kit/test/: demo.cpp
VehicleTerminal/: VehicleTerminal.pro  clock.cpp  clock.h  clock.ui  dht11.cpp  dht11.h  img.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  settingwindow.cpp  settingwindow.h  settingwindow.ui  speechrecognition.cpp  speechrecognition.h
VehicleTerminal/Map/: baidumap.cpp  baidumap.h  baidumap.ui  gps.c  gps.h  uart.c  uart.h
VehicleTerminal/Monitor/: ap3216  ap3216.cpp  ap3216.h  capture_thread.cpp  capture_thread.h  i2cbusses.c  monitor.cpp  monitor.h  monitor.ui  smbus.c  smbus.h
VehicleTerminal/Music/: musicplayer.cpp  musicplayer.h  musicplayer.ui  searchmusic.cpp  searchmusic.h  searchmusic.ui  style.qss
VehicleTerminal/Weather/: weather.cpp  weather.h  weather.ui
docs/: architecture.mermaid  音乐下载API.txt  项目功能.md
相关测试程序/: dht11_test  key_test  recorder_Test  使用说明.docx
设备树/: imx6ull-14x14-emmc-7-1024x600-c.dtb  imx6ull-14x14-evk.dts
驱动/dht11_driver/: .dht11_dri.ko.cmd  .dht11_dri.mod.o.cmd  .dht11_dri.o.cmd  Makefile  dht11_dri.c  dht11_dri.ko  dht11_dri.mod.c  dht11_test.c  modules.order
驱动/dht11_driver/.tmp_versions/: dht11_dri.mod
驱动/gpio_key/: .fasyncKey.ko.cmd  .fasyncKey.mod.o.cmd  .fasyncKey.o.cmd  .gpio_key.ko.cmd  .gpio_key.mod.o.cmd  .gpio_key.o.cmd  Makefile  gpio_key.c  gpio_key.ko  gpio_key.mod.c  key_test.c  modules.order
驱动/gpio_key/.tmp_versions/: fasyncKey.mod
